terraform/vpc/ec2.tf
resource "aws_key_pair" "main" {
  key_name   = "infraledger-key"
  public_key = file("~/.ssh/infraledger-key.pub")
}

data "aws_ami" "ubuntu" {
  most_recent = true
  owners      = ["099720109477"] # Canonical's official AWS account

  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd/ubuntu-jammy-22.04-amd64-server-*"]
  }

  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }
}

resource "aws_instance" "main" {
  ami           = data.aws_ami.ubuntu.id
  instance_type = "t3.medium"

  subnet_id                  = aws_subnet.public.id
  vpc_security_group_ids     = [aws_security_group.web.id]
  iam_instance_profile       = aws_iam_instance_profile.ec2_pricing.name
  key_name                   = aws_key_pair.main.key_name
  associate_public_ip_address = true

  user_data = <<-EOF
    #!/bin/bash
    set -e

    apt-get update -y
    apt-get install -y docker.io docker-compose-v2 git awscli
    systemctl enable docker
    systemctl start docker
    usermod -aG docker ubuntu

    sudo -u ubuntu git clone https://github.com/FranciscoSantos1/infraledger.git /home/ubuntu/infraledger

    cat > /home/ubuntu/infraledger/.env <<'ENV_EOF'
    DB_PASSWORD=${random_password.db_password.result}
    ENV_EOF
    chown ubuntu:ubuntu /home/ubuntu/infraledger/.env

    for i in $(seq 1 10); do
      if aws ecr get-login-password --region eu-west-1 | docker login --username AWS --password-stdin ${aws_ecr_repository.api.repository_url}; then
        break
      fi
      echo "ECR login attempt $i failed, retrying in 5s..."
      sleep 5
    done

    cd /home/ubuntu/infraledger
    sudo -u ubuntu docker compose -f docker-compose.prod.yml pull
    sudo -u ubuntu docker compose -f docker-compose.prod.yml up -d
    sleep 10
    sudo -u ubuntu docker compose -f docker-compose.prod.yml exec -T api python -m flask --app wsgi db upgrade
  EOF
  
  tags = {
    Name = "infraledger-api-server"
  }
}

output "instance_public_ip" {
  value = aws_instance.main.public_ip
}
